# Leo

./: .env.docker.example  .gitignore  Dockerfile  README.md  README_zh.md  docker-compose.yml  pyproject.toml  requirements.txt  run_mcp.py  run_rag_mcp_server.py  setup.py
.github/ISSUE_TEMPLATE/: show_me_the_bug.yaml
.github/workflows/: build-package.yaml  environment-corrupt-check.yaml  pytest-gate.yaml
app/: config.py  llm.py  logger.py
app/agent/: __init__.py  base.py  browser.py  manus.py  mcp.py  sandbox_agent.py  toolcall.py
app/mcp/: searxng_server.py  server.py
app/prompt/: llm_prompts.py  manus.py
app/rag_mcp/: __init__.py  chunking.py  config.py  embedder.py  parsers.py  server.py  service.py  storage.py  vector_store.py
app/sandbox/core/: terminal.py
app/tool/: file_operators.py  mcp.py  python_execute.py  str_replace_editor.py
backups/postgres/: openmanus-20260315-195137.dump
bff/: README.md  app.py  main.py
bff/api/: chat.py  feishu.py  models.py  router.py  tools.py
bff/api/chat/: __init__.py  chat.py
bff/api/rag/: rag.py
bff/core/: response.py
bff/domain/: models.py
bff/repositories/: model_store.py  store.py
bff/services/: __init__.py  agent_runtime.py  chat_service.py  container.py  feishu_long_connection.py  model_service.py  tooling_service.py
bff/utils/: env.py  memory_settings.py
config/: mcp.bff.example.json  mcp.bff.json
docs/: mcp-routing-shadow-eval.md  memory-architecture.md  postgres-storage-design.md  project-workflow-vertical-mermaid-example.md  rag-mcp-quickstart.md
docs/plans/: 2026-03-15-mcp-routing-v2-design.md
examples/benchmarks/: mcp_routing_shadow_eval.py
frontend/: eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/pages/: _document.tsx
tests/app/: test_llm_empty_response_fallback.py
tests/bff/: test_agent_runtime_budgeting.py  test_agent_runtime_mcp_selection.py  test_agent_runtime_response_selection.py  test_browser_tool_preference.py  test_chat_clear_memory.py  test_chat_memory_store_persistence.py  test_chat_prompt_request_isolation.py  test_chat_rag_prefetch_prompt.py  test_chat_stream_disconnect_persistence.py  test_feishu_audio_asr.py  test_feishu_long_connection.py  test_feishu_progress_dedup.py  test_feishu_skip_thinking_after_reply_started.py  test_feishu_step_progress.py  test_feishu_thoughts_progress.py  test_feishu_thoughts_truncated_skip.py  test_manus_create_mcp_mode.py  test_mcp_clients_isolation.py  test_mcp_routing_legacy_purge.py  test_memory_settings_and_types.py  test_memory_sync_service.py  test_playwright_media_guard_runtime.py  test_playwright_media_guidance.py  test_runtime_finalizer.py  test_runtime_observability_service.py  test_runtime_plan_validator.py  test_runtime_planner.py  test_runtime_planning.py  test_runtime_prefilter.py  test_runtime_tool_retriever_force_playwright.py  test_toolcall_python_browser_guard.py  test_toolcall_run_cleanup.py  test_toolcall_stream_thoughts_progress.py  test_windows_str_replace_editor_view.py
tests/rag_mcp/: test_chunking.py  test_retrieval.py
tests/sandbox/: test_client.py  test_sandbox.py
(+86 files in other folders)
